Fix overflow when window pinned

--- a/static/css/info.css
+++ b/static/css/info.css
@@ -20,3 +20,7 @@
 	padding-left:5px;
 	text-align:right;
 }
+
+.filters {
+    overflow: hidden;
+}
